--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: My Personal Website
-email: myemail@example.com
+title: Molly Sullivan
+email: msulli52@nd.edu
 description: >- # this means to ignore newlines until "baseurl:"
   This is my personal website hosted on GitHub Pages.
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -8,4 +8,4 @@ twitter_username: yourhandle
 github_username:  yourusername
 
 # Build settings
-theme: minima
+theme: jekyll-theme-cayman
